#Sign: sarzamin-20250611-bb54068aea85-106fe4c17097e8285daf4519f5be7327

[package]
name = "sarzamin"
version = "1.0.0"
edition = "2021"
authors = ["ParsiCore <parsicore.dev@gmail.com>"]
homepage = "https://crates.io/crates/sarzamin"
description = "Comprehensive geographical data library for Iran, including provinces, counties, and cities."
license = "Apache-2.0"
repository = "https://github.com/parsicore/sarzamin"
documentation = "https://docs.rs/sarzamin/"
readme = "README.md"
keywords = ["iran", "persian", "geo", "province", "city"]
categories = ["localization", "data-structures"]

[lib]
name = "sarzamin"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0.140"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]